# Databricks-Academy

./: .gitignore  pyproject.toml
large-language-models/LLM 01 - Applications with LLMs/: LLM 01 - LLMs with Hugging Face.ipynb  LLM 01L - LLMs with Hugging Face Lab.ipynb
large-language-models/LLM 02 - Embeddings, Vector Databases, and Search/: LLM 02 - Embeddings, Vector Databases, and Search.ipynb  LLM 02L - Embeddings, Vector Databases, and Search.ipynb  dais23_talks.parquet
large-language-models/LLM 03 - Multi-stage Reasoning/: LLM 03 - Building LLM Chains.ipynb  LLM 03L - Building LLM Chains Lab.ipynb
large-language-models/LLM 05 - Society and LLMs/: LLM 05L - LLMs and Society Lab.ipynb
