[project]
name = "databricks-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "datasets[audio,vision]<4",
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "protobuf<3.21",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "transformers[sentencepiece,torch]==4.57.6",
]
