[project]
name = "databricks-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "better-profanity>=0.7.0",
    "chromadb>=1.5.5",
    "datasets[audio,vision]<4",
    "faiss-cpu>=1.13.2",
    "google-search-results>=2.4.2",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "openai>=2.29.0",
    "protobuf<3.21",
    "python-dotenv>=1.2.2",
    "sacremoses>=0.1.1",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "tabulate>=0.10.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "transformers[sentencepiece,torch]==4.57.6",
    "wikipedia>=1.4.0",
]
